# any-mcp

./: .cursor.json  .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  PROJECT_STRUCTURE.md  README.md  README_MCP_INTEGRATION.md  any_mcp_cli.py  config.py  connect_server.py  demo_features.py  dockerfile  example_mcp_config.yaml  final_destination_demo.py  launch_notion_mcp.sh  main.py  main_with_mcp_manager.py  mcp_client.py  mcp_config.yaml  mcp_installer.py  mcp_manager.py  nathan_final_destination_demo.py  notion_cli.py  notion_web_demo.html  package-lock.json  package.json  pyproject.toml  run_tools.py  setup_team.sh  test_calculator.py  test_real_notion.py
.claude/: README.md
all_mcp_servers/: README.md  discord_mcp_server.py  notion_mcp_server.py
all_mcp_servers/notion_mcp_server/: README.md  __init__.py  main.py  package-lock.json  server.py
all_mcp_servers/notion_mcp_server/handlers/: __init__.py  base.py  databases.py  health.py  pages.py  search.py
all_mcp_servers/notion_mcp_server/utils/: __init__.py  config.py  extractors.py  notion_client.py
any_mcp/: __init__.py  main.py
any_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
any_mcp/api/: web_mcp.py
any_mcp/cli/: main.py
any_mcp/core/: cli_chat.py  client.py  gemini.py
any_mcp/integration/: README.md  engine.py  event_handlers.py  tool_adapter.py
any_mcp/managers/: manager.py
any_mcp/servers/: connect_server.py  mcp_server.py  notion_mcp_server.py
api/: __init__.py  web_mcp.py
config/: mcp_config.yaml  mcp_servers_config.yaml  mcp_servers_example.yaml
core/: chat.py  cli_chat.py  error_handling.py
demos/: README.md  calc_demo.py  github_mcp_demo.py  mcp_calc_server.py  mcp_unified_demo.py  real_github_demo.py  simple_demo.py  week2_demo.py
demos/notion/: notion_mcp_demo.py  real_notion_mcp_demo.py
demos/tools/: hybrid_tool_demo.py
docs/: llmgine-mcp-integration.md
examples/: demo_calculator.py  llmgine_integration_example.py  notion_mcp_server.py
examples/demos/: github_mcp_demo.py  real_github_demo.py
examples/notion_mcp_server_tools/: create_block.json  create_comment.json  create_page.json  delete_block.json  get_block_children.json  get_comments.json  get_me.json  get_page_content.json  get_user.json  get_users.json  move_page.json  search_with_filters.json  update_database.json
mcps/: notion-official.py
programs/engines/: mcp_tool_chat_engine.py
scripts/: migrate_to_mcp.py
src/any_mcp/: __init__.py  adapter.py  discovery.py  launcher.py  normalizer.py
src/any_mcp/api/: __init__.py
src/any_mcp/cli/: .env.save  main.py
src/any_mcp/core/: __init__.py  chat.py  cli.py  tools.py
src/any_mcp/integration/: __init__.py  message_bridge.py
src/llmgine/llm/tools/: __init__.py  mcp_bridge_integration.py  mcp_config_loader.py  mcp_registry.py  mcp_tool_manager.py  mcp_unified_tool_manager.py
src/universal_mcp_adapter/: __init__.py
src/universal_mcp_adapter/core/: types.py
tests/: __init__.py  conftest.py
tests/integration/: test_llmgine_mcp_integration.py  test_message_bridge.py
tests/unit/: test_client.py  test_manager.py
tools_for_mcp_server/: README.md  config_mcp_tools_path.py
tools_for_mcp_server/discord_mcp_server_tools/: get_guilds.json  health_check.json  read_messages.json  send_message.json
tools_for_mcp_server/notion_mcp_server_tools/: append_block_children.json  create_database.json  delete_database.json  delete_page.json  get_database_contents.json  health_check.json  query_database.json  search_notion.json  update_block.json  update_page.json  upload_file.json
tools_for_mcp_server/tool_mcp_server_loading_package/: load_tools.py
yaml_config/: example_mcp_config.yaml  mcp_config.yaml
